# metastable

./: .gitattributes  .gitignore  .replit  README.md  index.html  index.md  note-on-consistency  pyproject.toml  setup.py
00-attempt/: calculate-actions-dim-to-saddle.ipynb  display-map-3d.py  generate-dim-to-unstable-path.ipynb  generate-path.ipynb  verify-actions.ipynb
docs/: Gemfile  _config.yml  index.md
experiments/: calculate-actions.ipynb  display-map-3d.py  display-map.py  generate-map.py  plotly-test.py  scratch.py
explain/: KeldyshAuxiliaryHamiltonian.md  KeldyshHamiltonian.md  KeldyshLagrangian.md  KeldyshLagrangianGitHub.md  OriginalEom.md  Overview.md  QuantumImaginary.md  README.md
metastable/: __init__.py  calc_metastable_occupation.py  calc_metastable_peaks.py  calc_metstable_occupation.py  dykman.py  escape.py  gsl.c  liouvillian.py  metastable.py
notebooks/: KeldyshAuxiliaryHamiltonian.ipynb  KeldyshLagrangian.ipynb  OriginalEom.ipynb  Overview.ipynb  QuantumImaginary.ipynb
scratch/: 00-scratch.py  01-scratch.py  02-reproduce-birght-to-unstable.py  02-scratch.py  03-reproduce-bright-to-unstable.ipynb  03-scratch.py  04-classification.py  04-scratch.py  05-scratch.py  05.py  06-scratch.py  06.ipynb  07-low-kappa.ipynb  08-1-3-boundary-conditions.ipynb  08-scratch.py  09-low-kappa-example.ipynb  09-scratch.py  10-low-kappa-example-2.ipynb  11-low-kappa-example-3.ipynb  12-low-kappa-example-4.ipynb  13-low-kappa-example-5.ipynb  14-high-kappa-example.ipynb  bright-to-unstable.npz  display.py  map.npz  test.py
scripts/: md_to_html.py  (+1 more)
(+171 files in other folders)
