[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metastable"
version = "1.0.0"
description = "A project for metastable calculations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "qutip",
    "numpy",
    "scipy",
    "sympy",
    "tqdm",
    "matplotlib",
    "pandas",
    "pytest",
    "pydantic==2.10.3",
    "jupyter>=1.1.1",
]

[tool.setuptools.packages.find]
where = ["src"]
